--- a/itMICHHA_portfolio.github/index.html
+++ b/itMICHHA_portfolio.github/index.html
@@ -1,45 +1,66 @@
-<? 
-	session_start(); 
-?>
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>it MICHHA </title>
-	
+
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
+	<link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+
 
 	<script src="js/jquery-1.11.2.min.js"></script>
 	<script src="js/jquery.fullPage.js"></script>
 	<script src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-	<script src="js/waypoints.min.js"></script>
-	<script src="js/rwdapp.js"></script>
-	<script src="js/jquery.easing.1.3.js"></script>
-	<script src="js/rwd_chy.js"></script>
+	<script src="js/menu.js"></script>
+	<script src="js/index.js"></script>
+
 
 	<style>
-	#slide1-1 {	background: url(imgs/mainimage2.jpg)  40% 0%/ cover no-repeat;}
-    #slide2-1 {background: url(imgs/2-1main.jpg)  20% 100%/ cover no-repeat;}
+		#slide1-1 {
+			background: url(imgs/mainimage2.jpg) 42% 0%/ cover no-repeat;
+		}
 
+		#section2 .slide {
+			background: url(imgs/backgroundimg_2.jpg) 0% 100%/cover no-repeat;
+		}
+
+		#section2 #slide2-1 {
+			background: url(imgs/2-1main.jpg) 20% 100%/ cover no-repeat;
+		}
+
+		#slide3-1 {
+			background: url(imgs/imgtest3.jpg)no-repeat 30% 100%/cover;
+		}
+
+		#slide4-1 {
+			background: url(imgs/2-4background.jpg) 100% 20%/cover no-repeat;
+		}
+
+		#section4 {
+			background: url(imgs/backgroundimg_2.jpg) 0% 40%/cover no-repeat;
+		}
 	</style>
-    	
-	
+
+
 	<script>
-			(function(d) {
-			  var config = {
+		(function (d) {
+			var config = {
 				kitId: 'use0txu',
 				scriptTimeout: 3000,
 				async: true
-			  },
-			  h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-			})(document);
+			},
+				h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
+		})(document);
+
 	</script>
-	
+
 </head>
 
 <body>
@@ -59,9 +80,7 @@
 					<li><a href="#"><i class="xi-search"></i></a></li>
 					<li><a href="#">Cart</a></li>
 					<li><a href="#">Join us</a></li>
-					<li>
-						<? include "top_login1.php"; ?>
-					</li>
+					<li><a href="#">Log in</a></li>
 				</ul>
 
 				<div id="hamburger_icon">
@@ -141,7 +160,7 @@
 					<li><a href="#">Bag/Accessory</a></li>
 				</ul>
 			</li>
-			
+
 
 			<li id="nav3" class="accordion-toggle">
 				<a class="menu-link" href="#">OUTLET</a>
@@ -155,7 +174,7 @@
 					<li><a href="#">Bag/Accessory</a></li>
 				</ul>
 			</li>
-			
+
 
 			<li id="nav4" class="accordion-toggle">
 				<a class="menu-link" href="#">COLLECTION</a>
@@ -167,7 +186,7 @@
 					<li><a href="#">2020</a></li>
 				</ul>
 			</li>
-			
+
 		</ul>
 	</nav>
 
@@ -187,141 +206,278 @@
 
 		<section class="section" id="section2">
 			<div class="slide" id="slide2-1">
-                <div class="text2">
-				<p>기다려온 <span >겨울</span></p>
-				<p class="test">WINTER COLLECTION VOL1</p>
+				<div class="text2">
+					<p class="fit">기다려온<span>겨울</span></p>
+					<p class="test">WINTER COLLECTION VOL1</p>
+				</div>
 			</div>
-
 
 			<div class="slide" id="slide2-2">
-				<ul class="slidewrap cf">
+				<div class="mobile_slide">
+					<div class="slideimg">
+						<div><img src="imgs/1-1.jpg" alt=""></div>
+						<div><img src="imgs/1-2-2.jpg" alt=""></div>
+					</div>
+
+					<div class="mobile_text">
+						<p class="product">
+							<a href="#">LABEL POINT CASUAL JACKET</a>
+							<span><a href="#">more</a></span>
+						</p>
+						<p class="product"><a href="#">MESH BLOCK LONGSLEEVE SLIM T-SHIRT</a>
+							<span><a href="#">more</a></span>
+						</p>
+						<p class="product"><a href="#">PUMPKIN MINI SKIRT</a>
+							<span><a href="#">more</a></span>
+						</p>
+					</div>
+
+				</div>
+
+				<ul class="pctablet_slide">
 					<li>
-						<div class="product_text">
-							<p class="product"><a href="#">LABEL POINT CASUAL JACKET</a></p>
-							<p class="more"><a href="#">more</a></p>
-							<p class="product"><a href="#">MESH BLOCK LONGSLEEVE SLIM T-SHIRT</a></p>
-							<p class="more"><a href="#">more</a></p>
-						</div>
 						<img src="imgs/1-1.jpg" alt="">
+						<div class="product_text">
+							<p class="product">
+								<a href="#">LABEL POINT CASUAL JACKET</a>
+								<span><a href="#">more</a></span>
+							</p>
+							<p class="product"><a href="#">MESH BLOCK LONGSLEEVE SLIM T-SHIRT</a>
+								<span><a href="#">more</a></span>
+							</p>
+						</div>
 					</li>
 
 					<li>
-						<div class="product_text">
-							<p class="product"><a href="#">PUMPKIN MINI SKIRT</a></p>
-							<p class="more"><a href="#">more</a></p>
-						</div>
 						<img src="imgs/1-2.jpg" alt="">
+						<div class="product_text">
+							<p class="product"><a href="#">PUMPKIN MINI SKIRT</a>
+								<span><a href="#">more</a></span>
+							</p>
+						</div>
 					</li>
-
 				</ul>
 			</div>
-
 
 			<div class="slide" id="slide2-3">
-				<ul class="slidewrap cf">
+				<div class="mobile_slide">
+					<div class="slideimg">
+						<div><img src="imgs/2-1.jpg" alt=""></div>
+						<div><img src="imgs/2-2-2.jpg" alt=""></div>
+					</div>
+
+					<div class="mobile_text">
+						<p class="product"><a href="#">STITCH GOOSE DOWN JACKET</a>
+							<span><a href="#">more</a></span>
+						</p>
+						<p class="product"><a href="#">STITCH PADDING MINI SKIRT</a>
+							<span><a href="#">more</a></span>
+						</p>
+						<p class="product"><a href="#">POPEN COLLAR ZIPPER CARDIGAN</a>
+							<span><a href="#">more</a></span>
+						</p>
+
+						<p class="product"><a href="#">QUILTING HOBO BAG</a>
+							<span><a href="#">more</a></span>
+						</p>
+					</div>
+				</div>
+
+				<ul class="pctablet_slide">
 					<li>
-						<div class="product_text">
-							<p class="product"><a href="#">STITCH GOOSE DOWN JACKET</a></p>
-							<p class="more"><a href="#">more</a></p>
-							<p class="product"><a href="#">STITCH PADDING MINI SKIRT</a></p>
-							<p class="more"><a href="#">more</a></p>
-						</div>
 						<img src="imgs/2-1.jpg" alt="">
+						<div class="product_text">
+							<p class="product">
+								<a href="#">STITCH GOOSE DOWN JACKET</a>
+								<span><a href="#">more</a></span>
+							</p>
+							<p class="product"><a href="#">STITCH PADDING MINI SKIRT</a>
+								<span><a href="#">more</a></span>
+							</p>
+						</div>
 					</li>
 
 					<li>
-						<div class="product_text">
-							<p class="product"><a href="#">POPEN COLLAR ZIPPER CARDIGAN</a></p>
-							<p class="more"><a href="#">more</a></p>
-							<p class="product"><a href="#">QUILTING HOBO BAG</a></p>
-							<p class="more"><a href="#">more</a></p>
-						</div>
 						<img src="imgs/2-2.jpg" alt="">
+						<div class="product_text">
+							<p class="product"><a href="#">POPEN COLLAR ZIPPER CARDIGAN</a>
+								<span><a href="#">more</a></span>
+							</p>
+							<p class="product"><a href="#">QUILTING HOBO BAG</a>
+								<span><a href="#">more</a></span>
+							</p>
+						</div>
 					</li>
-
 				</ul>
 			</div>
+
+
 
 
 			<div class="slide" id="slide2-4">
-				<ul class="slidewrap cf">
+				<div class="mobile_slide">
+					<div class="slideimg">
+						<div><img src="imgs/3-1.jpg" alt="이미지"></div>
+						<div><img src="imgs/3-2-2.jpg" alt="이미지"></div>
+					</div>
+
+					<div class="mobile_text">
+						<p class="product"><a href="#">TOGGLE HANDMADE JACKET</a>
+							<span><a href="#">more</a></span>
+						</p>
+						<p class="product"><a href="#">CABLE KNIT VEST</a>
+							<span><a href="#">more</a></span>
+						</p>
+						<p class="product"><a href="#">CABLE KNIT SKIRT</a>
+							<span><a href="#">more</a></span>
+						</p>
+					</div>
+
+				</div>
+
+
+				<ul class="pctablet_slide">
 					<li>
-						<div class="product_text">
-							<p class="product"><a href="#">TOGGLE HANDMADE JACKET</a></p>
-							<p class="more"><a href="#">more</a></p>
-							<p class="product"><a href="#">CABLE KNIT VEST</a></p>
-							<p class="more"><a href="#">more</a></p>
-						</div>
 						<img src="imgs/3-1.jpg" alt="">
+						<div class="product_text">
+							<p class="product"><a href="#">TOGGLE HANDMADE JACKET</a>
+								<span><a href="#">more</a></span>
+							</p>
+
+							<p class="product"><a href="#">CABLE KNIT VEST</a>
+								<span><a href="#">more</a></span>
+							</p>
+						</div>
 					</li>
 
 					<li>
-						<div class="product_text">
-							<p class="product"><a href="#">CABLE KNIT SKIRT </a></p>
-							<p class="more"><a href="#">more</a></p>
-
-						</div>
 						<img src="imgs/3-2.jpg" alt="">
-					</li>
+						<div class="product_text">
+							<p class="product"><a href="#">CABLE KNIT SKIRT </a>
+								<span><a href="#">more</a></span>
+							</p>
+						</div>
 
+					</li>
 				</ul>
 			</div>
-
-
 
 			<div class="slide" id="slide2-5">
-				<ul class="slidewrap cf">
+				<div class="mobile_slide">
+					<div class="slideimg">
+						<div><img src="imgs/4-1.jpg" alt="이미지"></div>
+						<div><img src="imgs/4-2-2.jpg" alt="이미지"></div>
+					</div>
+
+					<div class="mobile_text">
+						<p class="product"><a href="#">STAND COLLAR OVERFIT CROP JACKET</a>
+							<span><a href="#">more</a></span>
+						</p>
+						<p class="product"><a href="#">POINT LETTERING PULL OVER</a>
+							<span><a href="#">more</a></span>
+						</p>
+						<p class="product"><a href="#">ECO LEATHER SHORT PANTS</a>
+							<span><a href="#">more</a></span>
+						</p>
+					</div>
+				</div>
+
+
+				<ul class="pctablet_slide">
 					<li>
-						<div class="product_text">
-							<p class="product"><a href="#">STAND COLLAR OVERFIT CROP JACKET</a></p>
-							<p class="more"><a href="#">more</a></p>
-							<p class="product"><a href="#">POINT LETTERIN PULL OVER
-								</a></p>
-							<p class="more"><a href="#">more</a></p>
-						</div>
 						<img src="imgs/4-1.jpg" alt="">
+						<div class="product_text">
+							<p class="product">
+								<a href="#">STAND COLLAR OVERFIT CROP JACKET</a>
+								<span><a href="#">more</a></span>
+							</p>
+							<p class="product"><a href="#">POINT LETTERING PULL OVER</a>
+								<span><a href="#">more</a></span>
+							</p>
+						</div>
 					</li>
 
 					<li>
-						<div class="product_text">
-							<p class="product"><a href="#">ECO LEATHER SHORT PANTS</a></p>
-							<p class="more"><a href="#">more</a></p>
-						</div>
 						<img src="imgs/4-2.jpg" alt="">
+						<div class="product_text">
+							<p class="product"><a href="#">ECO LEATHER SHORT PANTS</a>
+								<span><a href="#">more</a></span>
+							</p>
+							<p class="product"><a href="#">QUILTING HOBO BAG</a>
+								<span><a href="#">more</a></span>
+							</p>
+						</div>
 					</li>
-
 				</ul>
 			</div>
 
+			<div class="slide" id="slide2-6">
+				<div class="mobile_slide">
+					<div class="slideimg">
+						<div><img src="imgs/5-1.jpg" alt="이미지"></div>
+						<div><img src="imgs/5-2-2.jpg" alt="이미지"></div>
+					</div>
 
+					<div class="mobile_text">
+						<p class="product"><a href="#">TWEED CROP JACKET</a>
+							<span><a href="#">more</a></span>
+						</p>
+						<p class="product"><a href="#">TEXTURE POINT SKIRT</a>
+							<span><a href="#">more</a></span>
+						</p>
+						<p class="product"><a href="#">CASHMERE BLEND KNIT TOP</a>
+							<span><a href="#">more</a></span>
+						</p>
+
+						<p class="product"><a href="#">QUILTING HOBO BAG</a>
+							<span><a href="#">more</a></span>
+						</p>
+					</div>
+				</div>
+
+
+				<ul class="pctablet_slide">
+					<li>
+						<img src="imgs/5-1.jpg" alt="">
+						<div class="product_text">
+							<p class="product">
+								<a href="#">TWEED CROP JACKET</a>
+								<span><a href="#">more</a></span>
+							</p>
+							<p class="product"><a href="#">TEXTURE POINT SKIRT</a>
+								<span><a href="#">more</a></span>
+							</p>
+						</div>
+					</li>
+
+					<li>
+						<img src="imgs/5-2.jpg" alt="">
+						<div class="product_text">
+							<p class="product"><a href="#">CASHMERE BLEND KNIT TOP</a>
+								<span><a href="#">more</a></span>
+							</p>
+							<p class="product"><a href="#">QUILTING HOBO BAG</a>
+								<span><a href="#">more</a></span>
+							</p>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</section>
-
-
 
 		<section class="section" id="section3">
 			<div class="slide" id="slide3-1">
-				<div class="collection2 ">
-
-					<p><span>이</span><span class="test">계절</span>을 즐길 때</p>
-					<p>WINTER COLLECTION VOL2</p>
+				<div class="text2 text3">
+					<p>이<span>계절을</span>즐길때</p>
+					<p class="test">WINTER COLLECTION VOL2</p>
 				</div>
 			</div>
 
 		</section>
 
+
 		<section class="section" id="section4">
-			<div class="slide" id="slide4-1">
-				<ul class="cf">
-					<li class="box-hover"><img src="imgs/4_1.jpg" alt=""></li>
-					<li class="box-hover"><img src="imgs/4_3.jpg" alt=""></li>
-				</ul>
-			</div>
-
-		</section>
-
-
-		<section class="section" id="section5">
-			<div class="slide" id="slide5-1">
+			<div class="slide" id="slid4-1">
 				<ul class="instatext">
 					<li><a href="">FOLLOW @it MISHHA on instagram</a></li>
 					<li><a href=""><i class=" xi-instagram"></i></a></li>
@@ -338,10 +494,13 @@
 		</section>
 
 
-		<footer class="section fp-auto-height" id="section6">
-			<div class="footerwrapper cf">
-				<div class="customer">
-					<img src="imgs/mainlogo.png" alt="">
+		<footer class="section fp-auto-height" id="section5">
+			<div class="footer_wrapper cf">
+				<div class="logo">
+					<img src="imgs/mainlogo2.png" alt="">
+				</div>
+				<div class="customer_wrap">
+
 					<ul>
 						<li>고객센터 1644-0107</li>
 						<li>평일 9:30-17:00</li>
@@ -351,46 +510,39 @@
 				</div>
 
 
-				<div class="outer">
-					<ul class="nav1">
-						<li>시선인터내셔널 대표: 신완철&nbsp;&nbsp;&nbsp;주소: 서울시 강남구 테헤란로 34길 6 태광타워&nbsp;&nbsp;&nbsp;사업자등록번호:
-							214-81-98102</li>
-						<li>통신판매업신고:제 2016-서울-강남-03574호&nbsp;&nbsp;&nbsp;이메일: cs@sisun.com &nbsp;&nbsp;&nbsp;팩스: 02-523-6253
-						</li>
-						<li>2020 SISUN.COM All Rights Reserved</li>
-					</ul>
-				</div>
 
-
-
-				<div class="menuwrap">
-					<ul class="nav4">
+				<div class="fmenu_wrap">
+					<ul class="fnav1">
 						<li>고객서비스</li>
 						<li><a href="#">매장찾기</a></li>
-						<li><a href="#">공지</a></li>
-						<li><a href="#">등급별 회원혜택</a></li>
+						<li><a href="#">공지사항</a></li>
+						<li><a href="#">등급별혜택</a></li>
 					</ul>
 
-					<ul class="nav5">
-						<li>문의</li>
+					<ul class="fnav2">
+						<li>문의사항</li>
 						<li><a href="#">주문배송 조회</a></li>
 						<li><a href="#">교환반품 신청</a></li>
-						<li><a href="#">자주 묻는 질문</a></li>
+						<li><a href="#">자주묻는 질문</a></li>
 					</ul>
 
-					<ul class="nav6">
+					<ul class="fnav3">
 						<li>이용약관</li>
 						<li><a href="#">개인정보처리방침</a></li>
 						<li><a href="#">사업자정보확인</a></li>
 					</ul>
 				</div>
+
+				<div class="address_wrap">
+					<address class="adrress">
+						시선인터내셔널 대표: 신완철 주소: 서울시 강남구 테헤란로 34길 6 태광타워 사업자등록번호:214-81-98102 통신판매업신고:제 2016-서울-강남-03574호
+						이메일: cs@sisun.com 팩스:02-523-6253
+						2020 SISUN.COM All Rights Reserved
+					</address>
+				</div>
 			</div>
 		</footer>
 	</main>
-
-
-
-
 
 </body>
 
