--- a/market_B/marketB.html
+++ b/market_B/marketB.html
@@ -37,7 +37,7 @@
 <body>
   <div id="header">
     <div class="header-container">
-      <div class="head">
+      <div class="head cf:after">
         <h2> <img src="image/logo.png" alt=""> </h2>
         <div class="search">
           <form class=method="post" action="send-searchl.php">
@@ -60,6 +60,7 @@
   </div>
 
 
+<!-- 
 
   <div id="banner_pc">
     <ul class="slide_banner">
@@ -69,30 +70,42 @@
       <li class="slick-slide"><a href="#"> <img src="image/banner.png" alt=""></a></li>
       <li class="slick-slide"><a href="#"> <img src="image/banner.png" alt=""></a></li>
     </ul>
+  </div> -->
+
+  
+
+  <div id="banner_pc">
+    <ul class="slide_banner">
+      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x600" alt=""></a></li>
+      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x600" alt=""></a></li>
+      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x600" alt=""></a></li>
+      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x600" alt=""></a></li>
+      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x600" alt=""></a></li>
+    </ul>
   </div>
 
   <section id="iconmenu">
 
     <ul>
-      <li><a href="#"><img src="image/lookbookicon.jpg" alt="cup1">
+      <li><a href="#"><img src="image/circle_menu1.png" alt="cup1">
           <span>가구</span></a></li>
-      <li><a href="#"><img src="image/actumicon.jpg" alt="cup2">
+      <li><a href="#"><img src="image/circle_menu2.png" alt="cup2">
           <span>조명/데코소품</span></a></li>
-      <li><a href="#"><img src="image/lookbookicon.jpg" alt="cub3">
+      <li><a href="#"><img src="image/circle_menu3.png" alt="cub3">
           <span>패션/커튼</span></a></li>
-      <li><a href="#"><img src="image/made.jpg" alt="cub4">
+      <li><a href="#"><img src="image/circle_menu4.png" alt="cub4">
           <span>베란다/바닥재</span></a></li>
-      <li><a href="#"><img src="image/freedelivery.jpg" alt="cub5">
+      <li><a href="#"><img src="image/circle_menu5.png" alt="cub5">
           <span>수납/청소용품</span></a></li>
-      <li><a href="#"><img src="image/lookbookicon.jpg" alt="cup1">
+      <li><a href="#"><img src="image/circle_menu6.png" alt="cup1">
           <span>주방용품</span></a></li>
-      <li><a href="#"><img src="image/freedelivery.jpg" alt="cub5">
+      <li><a href="#"><img src="image/circle_menu7.png" alt="cub5">
           <span>욕실용품</span></a></li>
-      <li><a href="#"><img src="image/actumicon.jpg" alt="cup2">
+      <li><a href="#"><img src="image/circle_menu8.png" alt="cup2">
           <span>어린이</span></a></li>
-      <li><a href="#"><img src="image/lookbookicon.jpg" alt="cub3">
+      <li><a href="#"><img src="image/circle_menu9.png" alt="cub3">
           <span>뷰티/패션</span></a></li>
-      <li><a href="#"><img src="image/made.jpg" alt="cub4">
+      <li><a href="#"><img src="image/circle_menu10.png" alt="cub4">
           <span>애완</span></a></li>
     </ul>
   </section>
@@ -101,18 +114,30 @@
 
     <div class="nav">
       <ul class="tab_menu">
-        <li><a href="#tab1" class="selected">BEST ITEM</a></li>
+        <li><a href="#tab1" class="selected">BEST ITEM</a>
+        </li>
 
-        <li><a href="#tab2">NEW ARRIVAL</a></li>
+
+        <li><a href="#tab2">NEW ARRIVAL</a>
+        </li>
 
 
-        <li><a href="#tab4">MD’S CHOICE</a></li>
+        <li><a href="#tab4">MD'S CHOICE</a>
+        </li>
       </ul>
     </div>
 
 
     <ul class="panel">
       <li id="tab1">
+        <ul class="tbtn cf:after">
+          <li class="new"><a href="#mpr1" class="selected">가구1</a></li>
+          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+          <li class="best"><a href="#mpr2">패브릭·커튼</a></li>
+          <li class="best"><a href="#mpr2">베란다·배닥자</a></li>
+          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+        </ul>
         <ul class="content">
           <li>
               <img src="http://placehold.it/370X180" alt="">
@@ -136,6 +161,14 @@
 
 
       <li id="tab2">
+        <ul class="tbtn cf:after">
+          <li class="new"><a href="#mpr1" class="selected">가구2</a></li>
+          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+          <li class="best"><a href="#mpr2">패브릭·커튼</a></li>
+          <li class="best"><a href="#mpr2">베란다·배닥자</a></li>
+          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+        </ul>
         <ul class="content">
           <li>
               <img src="https://source.unsplash.com/category/nature/370x180">
@@ -153,6 +186,14 @@
       </li>
 
       <li id="tab3">
+        <ul class="tbtn">
+          <li class="new"><a href="#mpr1" class="selected">가구3</a></li>
+          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+          <li class="best"><a href="#mpr2">패브릭·커튼</a></li>
+          <li class="best"><a href="#mpr2">베란다·배닥자</a></li>
+          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+        </ul>
         <ul class="content">
           <li>
               <img src="https://source.unsplash.com/category/furniture/370x180">
@@ -171,7 +212,12 @@
       </li>
     </ul>
   </div>
+
   <script src="js/marketB.js"></script>
+
+  <div class="blank">
+
+  </div>
 </body>
 
 </html>
