--- a/market_B/marketB.html
+++ b/market_B/marketB.html
@@ -73,19 +73,18 @@
   </div> -->
 
   
-
+  <main>
   <div id="banner_pc">
     <ul class="slide_banner">
-      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x600" alt=""></a></li>
-      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x600" alt=""></a></li>
-      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x600" alt=""></a></li>
-      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x600" alt=""></a></li>
-      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x600" alt=""></a></li>
+      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x650" alt=""></a></li>
+      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x650" alt=""></a></li>
+      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x650" alt=""></a></li>
+      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x650" alt=""></a></li>
+      <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x650" alt=""></a></li>
     </ul>
   </div>
 
   <section id="iconmenu">
-
     <ul>
       <li><a href="#"><img src="image/circle_menu1.png" alt="cup1">
           <span>가구</span></a></li>
@@ -212,12 +211,11 @@
       </li>
     </ul>
   </div>
+</main>
+
 
   <script src="js/marketB.js"></script>
 
-  <div class="blank">
-
-  </div>
 </body>
 
 </html>
