--- a/market_B/marketB.html
+++ b/market_B/marketB.html
@@ -82,7 +82,12 @@
       <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x650" alt=""></a></li>
       <li class="slick-slide"><a href="#"> <img src="http://placehold.it/1920x650" alt=""></a></li>
     </ul>
-  </div>
+
+   <div class="button">
+    <button class="play">시작</button>
+    <button class="pause">정지</button>
+   </div>
+ </div>
 
   <section id="iconmenu">
     <ul>
