--- a/market_B/marketB.html
+++ b/market_B/marketB.html
@@ -173,12 +173,12 @@
     <ul class="panel">
       <li id="tab1">
         <ul class="tbtn cf:after">
-          <li class="new"><a href="#mpr1" class="selected">가구1</a></li>
-          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
-          <li class="best"><a href="#mpr2">패브릭·커튼</a></li>
-          <li class="best"><a href="#mpr2">베란다·배닥자</a></li>
-          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
-          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+          <li><a href="#mpr1" class="selected">가구1</a></li>
+          <li><a href="#mpr2">조명·데코소품</a></li>
+          <li><a href="#mpr2">패브릭·커튼</a></li>
+          <li><a href="#mpr2">베란다·배닥자</a></li>
+          <li><a href="#mpr2">조명·데코소품</a></li>
+          <li><a href="#mpr2">조명·데코소품</a></li>
         </ul>
         <ul class="content">
           <li>
@@ -204,12 +204,12 @@
 
       <li id="tab2">
         <ul class="tbtn cf:after">
-          <li class="new"><a href="#mpr1" class="selected">가구2</a></li>
-          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
-          <li class="best"><a href="#mpr2">패브릭·커튼</a></li>
-          <li class="best"><a href="#mpr2">베란다·배닥자</a></li>
-          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
-          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+          <li><a href="#mpr1" class="selected">가구2</a></li>
+          <li><a href="#mpr2">조명·데코소품</a></li>
+          <li><a href="#mpr2">패브릭·커튼</a></li>
+          <li><a href="#mpr2">베란다·배닥자</a></li>
+          <li><a href="#mpr2">조명·데코소품</a></li>
+          <li><a href="#mpr2">조명·데코소품</a></li>
         </ul>
         <ul class="content">
           <li>
@@ -229,12 +229,12 @@
 
       <li id="tab3">
         <ul class="tbtn">
-          <li class="new"><a href="#mpr1" class="selected">가구3</a></li>
-          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
-          <li class="best"><a href="#mpr2">패브릭·커튼</a></li>
-          <li class="best"><a href="#mpr2">베란다·배닥자</a></li>
-          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
-          <li class="best"><a href="#mpr2">조명·데코소품</a></li>
+          <li><a href="#mpr1" class="selected">가구3</a></li>
+          <li><a href="#mpr2">조명·데코소품</a></li>
+          <li><a href="#mpr2">패브릭·커튼</a></li>
+          <li><a href="#mpr2">베란다·배닥자</a></li>
+          <li><a href="#mpr2">조명·데코소품</a></li>
+          <li><a href="#mpr2">조명·데코소품</a></li>
         </ul>
         <ul class="content">
           <li>
@@ -254,6 +254,48 @@
       </li>
     </ul>
   </div>
+
+  
+    <footer>
+      <div class="footer_wrapper">
+      <div class="fmenu">
+      <p>고객지원</p>
+      <ul class="cf">
+        <li>회사 소개</li>
+        <li>문의(Q&A) </li>
+        <li>지점 찾기</li>
+        <li>조립 설명서</li>
+      </ul>
+
+      <p>정보공개</p>
+      <ul class="cf">
+        <li>이용 약관</li>
+        <li>품질보증기준 </li>
+        <li>개인정보처리방침</li>
+        <li>공지 사항</li>
+      </ul>
+     </div>
+
+       <div class="finfo">
+        <h2><a>마켓비</a></h2>
+        <ul class="cf">
+          <li> 전화 031 - 943 - 8307</li>
+          <li> 팩스1 031 - 040 - 6654 </li>
+          <li> 팩스2 070 - 4855 - 3088</li>
+        </ul>
+
+        <ul class="cf">
+          <li> 평일 09:00 ~ 17:30 </li>
+          <li> 점심 12:30 ~ 13:30 </li>
+          <li> 휴무 토, 일, 공휴일</li>
+        </ul>
+
+        <address>
+          교환 / 반품 주소 : 경기도 파주시 파주읍 정문로 726 마켓비 물류센터
+        </address>
+        </div>
+      </div>
+    </footer>
 </main>
 
 
