--- a/market_B/marketB_project_mobile/tab.html
+++ b/market_B/marketB_project_mobile/tab.html
@@ -2037,7 +2037,7 @@
         </nav>
 
         <ul class="panel">
-            <li class="Ptabs_content" id="Ptab1">
+            <li class="Ptabs-content" id="Ptab1">
                 <nav>
                     <ul class="Pnested-tabs cf">
                         <li>
@@ -2477,7 +2477,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="Ptabs_content" id="Ptab2">
+            <li class="Ptabs-content" id="Ptab2">
                 <nav>
                     <ul class="Pnested-tabs cf">
                         <li>
@@ -2917,7 +2917,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="Ptabs_content" id="Ptab3">
+            <li class="Ptabs-content" id="Ptab3">
                 <nav>
                     <ul class="Pnested-tabs cf">
                         <li>
