--- a/market_B/marketB.html
+++ b/market_B/marketB.html
@@ -421,7 +421,57 @@
 
     </style>
 
-    <div class="pc_mainbanner">
+   <div class="mainbanner" id="M-mainbanner">
+    <ul class="swiper-wrapper">
+      <!-- Slides -->
+      <li class="swiper-slide Mbanner1" >
+        <a> 
+        <div>
+            <h2>slide 1</h2>
+            <p>slide 1 description</p>
+        </div>
+        </a> 
+     </li>
+      <li class="swiper-slide Mbanner2">
+        <a> 
+        <div>
+            <h2>slide 2</h2>
+            <p>slide 2 description</p>
+        </div>
+        </a> 
+      </li>
+      <li class="swiper-slide Mbanner3">
+        <a> 
+        <div>
+            <h2>slide 3</h2>
+            <p>slide 3 description</p>
+        </div>
+        </a> 
+    </li>
+      <li class="swiper-slide Mbanner4">
+        <a> 
+        <div>
+            <h2>slide 4</h2>
+            <p>slide 4 description</p>
+        </div>
+         </a> 
+    </li>
+    </ul>
+
+    
+    <div class="swiper-pagination"></div>
+    <div class="swiper-progressbar"></div>
+    <div class="button-wrapper container">
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+      <!-- <div class="play-button">
+        <div class="start">시작</div>
+        <div class="pause active">정지</div>
+      </div> -->
+      </div>
+  </div>
+
+<!--     <div class="pc_mainbanner">
       <div class="swipe_main_banner" id="swipe_main_banner">
         <div class="swipe_banner_all" id="swipe_banner_all">
           <div class="swiper-wrapper">
@@ -464,7 +514,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
 
